<resources>
    <string name="app_name">DatosPersonaList</string>
    <string name="title_name">LIST</string>
    <string name="main_view_add_person_button_text">Add</string>
    <string name="main_view_start_app_button_text">Start</string>
    <string name="main_view_exit_button_text">Exit</string>

    <string name="main_view_delete_dialog_title_text">Delete user</string>
    <string name="main_view_delete_dialog_description_text">Do you wish to delete user</string>

    <string name="main_view_empty_list_view_text">Not available</string>

    <string name="pc_yes">YES</string>
    <string name="pc_no">NO</string>

    <string name="activity_lanza_actividad_view_name_text">Name</string>
    <string name="activity_lanza_actividad_view_surenames_text">Surenames</string>
    <string name="activity_lanza_actividad_view_age_text">Age</string>
    <string name="activity_lanza_actividad_view_phone_text">Phone</string>
    <string name="activity_lanza_actividad_view_driving_license_text">Driving License</string>
    <string name="activity_lanza_actividad_view_english_level_text">English Level</string>
    <string name="activity_lanza_actividad_view_low_level_text">Low</string>
    <string name="activity_lanza_actividad_view_medium_level_text">Medium</string>
    <string name="activity_lanza_actividad_view_high_level_text">High</string>
    <string name="activity_lanza_actividad_view_registry_date_text">Registry date</string>
    <string name="activity_lanza_actividad_view_change_date_button_text">CHANGE DATE</string>
    <string name="activity_lanza_actividad_view_save_button_text">SAVE</string>
    <string name="activity_lanza_actividad_view_reset_button_text">RESET</string>
    <string name="activity_lanza_actividad_view_cancel_button_text">CANCEL</string>

    <string name="list_view_item_name_text">Name:</string>
    <string name="list_view_item_age_text">Age:</string>
    <string name="list_view_item_pc_text">PC:</string>
    <string name="list_view_item_english_level_text">Level:</string>
    <string name="list_view_item_date_text">REGISTRY:</string>
</resources>