<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="45dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_name"
        android:textColor="@color/DarkOrange"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ProgressBar
                android:id="@+id/progressBarLoading"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="gone"
                android:layout_weight="1" />
            <ListView
                android:id="@+id/peopleListView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:gravity="left"
                android:textSize="13dp"
                android:scrollbars="horizontal|vertical"/>
            <TextView
                android:id="@+id/emptyTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_view_empty_list_view_text" />
        </RelativeLayout>
    </HorizontalScrollView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/startProgramButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"
            android:layout_weight="1"
            android:onClick="startApp"
            android:text="@string/main_view_start_app_button_text" />

        <Button
            android:id="@+id/addPersonButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:visibility="gone"
            android:onClick="addPersonData"
            android:text="@string/main_view_add_person_button_text" />

        <Button
            android:id="@+id/exitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:visibility="gone"
            android:onClick="exit"
            android:text="@string/main_view_exit_button_text" />
    </LinearLayout>

</LinearLayout>